# kollie-forked-mirror

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  mypy.ini  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yaml  helm-publish.yaml  sync-main.yml
charts/kollie/: Chart.yaml  README.md  values.yaml
charts/kollie/templates/: _helpers.tpl  configmap.yaml  deployment-daemon.yaml  deployment.yaml  ingress.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
kollie/: constants.py  exceptions.py  heartbeat.py  logging_config.py  models.py
kollie/app/: auth.py  main.py
kollie/app/api/: endpoints.py
kollie/app/cli/: bin.py
kollie/app/ui/: templatefilters.py  viewmodels.py  views.py
kollie/cluster/: authentication.py  configmap.py  constants.py  git_repository.py  git_repository_request.py  image_policy.py  image_policy_spec.py  image_update_automation.py  ingress.py  interfaces.py  kustomization.py  kustomization_request.py
kollie/persistence/: __init__.py  app_bundle.py  app_template.py  app_template_source.py  app_template_store.py  item_source.py
kollie/service/: applications.py  envs.py
tests/: test_common_substitutions.json  test_exceptions.py  test_heartbeat.py
tests/kollie/: conftest.py  helpers.py  test_models.py
tests/kollie/api/: test_endpoints.py
tests/kollie/cluster/: test_authentication.py  test_configmap.py  test_git_repository.py  test_git_repository_request.py  test_image_policy.py  test_image_policy_spec.py  (+4 more)
(+20 files in other folders)
