[tool.poetry]
name = "kollie"
version = "0.1.0"
description = ""
authors = [
    "Dinesh Vitharanage <d@dnsh.io>",
    "Sam Weston <sam.weston@tails.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = { extras = ["standard"], version = "*" }
kubernetes = "*"
fastapi = "*"
pydantic = "*"
python-multipart = "*"
jinja2 = "*"
httpx = "*"
typer = { extras = ["all"], version = "*" }
structlog = "*"
freezegun = "*"
arrow = "*"
environs = "*"

[tool.poetry.scripts]
start = "kollie.app:main"

[tool.poetry.group.dev.dependencies]
pytest-mock = "*"
pytest = "*"
ruff = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
